finishing the webpack builds and bundling for deployment

--- a/server/serverDist/public/index.html
+++ b/server/serverDist/public/index.html
@@ -22,6 +22,6 @@
 		<div id="app">
 		  <!-- webpack component goes here-->
 		</div>
-	</body>
+	<script type="text/javascript" src="/bundle.js"></script></body>
   </body>
 </html>
